<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.permission.PermissionManagerActivity"
    tools:showIn="@layout/activity_permission_manage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/curr_role_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/notice_publish_title_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/curr_role"
                    android:textAppearance="@style/notice_publish_title" />

                <TextView
                    android:id="@+id/curr_role"
                    style="@style/notice_publish_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/role_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/notice_publish_title_bg"
                android:orientation="horizontal"
                android:paddingRight="5dp">

                <TextView
                    android:id="@+id/role_selecte_checkbox_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/role_title"
                    android:textAppearance="@style/notice_publish_title" />

                <CheckBox
                    android:id="@+id/role_selete_checkbox"
                    style="@style/notice_publish_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="#fff"
                    android:button="@null"
                    android:checked="false"
                    android:drawableRight="@drawable/filter_cursor"
                    android:singleLine="true"
                    android:text="@string/no_data" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/role_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/notice_publish_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/role_permission_desc" />

                <TextView
                    android:id="@+id/role_desc"
                    style="@style/notice_publish_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reason_for_permission_"
                    style="@style/notice_publish_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/apply_permission_reason" />

                <EditText
                    android:id="@+id/reason_for_permission"
                    style="@style/notice_publish_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/notice_publish_title_bg"
                    android:padding="8dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/applyPermission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/circle_bt_selector"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/apply_permission"
                android:textColor="#ff666666" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
